--- a/Resources/css/styles.scss
+++ b/Resources/css/styles.scss
@@ -16,6 +16,8 @@
    --color-grey6: #12181b;
    --br-sm-2: 14px;
    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+   --box-shadow-2: 1px 1px 20px rgba(0,0,0,.1);
+   --box-shadow-3: 1px 1px 20px rgba(0,0,0,.3);
 
  }
 
@@ -456,6 +458,59 @@
    opacity: 1;
    transform: scale(1);
    transition: all .4s ease-in-out;
+}
+
+/* Blogs section */
+.blogs{
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 2rem;
+   margin-top: 3rem;
+   .blog{
+      position: relative;
+      background-color: var(--color-grey5);
+      border-radius: 5px;
+      box-shadow: var(--box-shadow-2);
+      &:hover{
+         box-shadow: var(--box-shadow-3);
+         transform: translateY(-5px);
+         transition: all .4s ease-in-out;
+         img{
+            filter: grayscale(0);
+            transform: scale(1.1);
+            box-shadow: 0px 4px 15px rgba(0,0,0,0.8);
+         }
+      }
+      img{
+         width: 100%;
+         height: 300px;
+         object-fit: cover;
+         border-top-left-radius: 5px;
+         border-top-right-radius: 5px;
+         filter: grayscale(100%);
+         transition: all .4s ease-in-out;
+      }
+      .blog-text{
+         margin-top: -7px;
+         padding: 1.1rem;
+         border-top: 8px solid var(--color-secondary);
+         h4{
+            font-size: 1.5rem;
+            margin-bottom: .7rem;
+            transition: all .4s ease-in-out;
+            cursor: pointer;
+            &:hover{
+               color: var(--color-secondary);
+
+            }
+         }
+         p{
+            color: var(--color-grey2);
+            line-height: 2rem;
+            padding-bottom: 1rem;
+         }
+      }
+   }
 }
 
 
