--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -18,6 +18,21 @@
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
   --box-shadow-2: 1px 1px 20px rgba(0,0,0,.1);
   --box-shadow-3: 1px 1px 20px rgba(0,0,0,.3);
+  --box-shadow-4: 0px 3px 15px rgba(0,0,0,.2);
+}
+
+.light-mode {
+  --color-primary:#FFFFFF;
+  --color-secondary: #F56692;
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey1: #6c7983;
+  --color-grey2: #6c7983;
+  --color-grey3: #6c7983;
+  --color-grey4: #454e56;
+  --color-grey5: #f8f8f8;
+  --color-grey6: #12181b;
 }
 
 body {
@@ -136,6 +151,30 @@ section {
 }
 .controls .control i {
   font-size: 1.2rem;
+  color: var(--color-grey2);
+  pointer-events: none;
+}
+
+.theme-btn {
+  top: 5%;
+  right: 3%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  position: fixed;
+  cursor: pointer;
+  background-color: var(--color-grey4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: var(--box-shadow-4);
+  transition: all 0.1s ease-in-out;
+}
+.theme-btn:active {
+  transform: translateY(-3px);
+}
+.theme-btn i {
+  font-size: 1.4rem;
   color: var(--color-grey2);
   pointer-events: none;
 }
