--- a/Resources/css/styles.scss
+++ b/Resources/css/styles.scss
@@ -50,9 +50,10 @@
  }
 
  header{
-   height: 100vh;
+   min-height: 100vh;
    color: var(--color-white);
    overflow: hidden;
+   
  }
 
  section{
@@ -175,7 +176,7 @@
 .header-content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   height: 100%;
+   min-height: 100vh;
    .left-header {
       display: flex;
       align-items: center;
@@ -289,6 +290,7 @@
       h4{
          font-size: 2rem;
          text-transform: uppercase;
+         padding-left: 1rem;
       }
    }
 }
@@ -718,3 +720,4 @@
    }
 }
 
+@import './media';
