--- a/Resources/css/_media.scss
+++ b/Resources/css/_media.scss
@@ -1,6 +1,4 @@
 @media screen and (max-width: 600px) {
-    
-
     .theme-btn{
         width: 50px;
         height: 50px;
@@ -20,38 +18,29 @@
         }
     }
     .section{
-        padding: 2rem 2.5rem !important;
+        padding: 7rem 2.5rem !important;
     }
     .timeline{
         grid-template-columns: 1fr;
         padding-bottom: 6rem;
     }
-    
     .portfolios{
         grid-template-columns: 1fr !important;
         padding-bottom: 6rem !important;
     }
-    
     .blogs{
         grid-template-columns: 1fr !important;
         padding-bottom: 6rem !important;
     }
-    
     .contact-content-con{
         flex-direction: column;
         .right-contact{
             margin-left: 0;
             margin-top: 2.5rem;
+            margin-bottom: 6rem !important;
         } 
     }
     
-    .contact-content-con .right-contact .i-c-2{
-        flex-direction: column;
-    }
-    .contact-content-con .right-contact .i-c-2 :last-child{
-        margin-left: 0;
-        margin-top: 1.5rem;
-    }
     .main-title{
         h2{
             font-size: 2rem;
