--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -731,7 +731,6 @@ section {
     width: 50px;
     height: 50px;
   }
-
   .about-container {
     grid-template-columns: 1fr;
   }
@@ -745,43 +744,29 @@ section {
   .about-container .left-about p {
     padding-left: 0;
   }
-
   .section {
-    padding: 2rem 2.5rem !important;
+    padding: 7rem 2.5rem !important;
   }
-
   .timeline {
     grid-template-columns: 1fr;
     padding-bottom: 6rem;
   }
-
   .portfolios {
     grid-template-columns: 1fr !important;
     padding-bottom: 6rem !important;
   }
-
   .blogs {
     grid-template-columns: 1fr !important;
     padding-bottom: 6rem !important;
   }
-
   .contact-content-con {
     flex-direction: column;
   }
   .contact-content-con .right-contact {
     margin-left: 0;
     margin-top: 2.5rem;
+    margin-bottom: 6rem !important;
   }
-
-  .contact-content-con .right-contact .i-c-2 {
-    flex-direction: column;
-  }
-
-  .contact-content-con .right-contact .i-c-2 :last-child {
-    margin-left: 0;
-    margin-top: 1.5rem;
-  }
-
   .main-title h2 {
     font-size: 2rem;
   }
@@ -796,11 +781,9 @@ section {
   header {
     padding: 0 !important;
   }
-
   .section {
     padding: 7rem 11rem;
   }
-
   .contact-content-con {
     flex-direction: column;
   }
@@ -808,11 +791,9 @@ section {
     margin-left: 0;
     margin-top: 2.5rem;
   }
-
   .contact-content-con .right-contact .i-c-2 {
     flex-direction: column;
   }
-
   .contact-content-con .right-contact .i-c-2 :last-child {
     margin-left: 0;
     margin-top: 1.5rem;
@@ -825,15 +806,12 @@ section {
   .about-container .right-about {
     padding-top: 2.5rem;
   }
-
   .portfolios {
     grid-template-columns: 1fr 1fr;
   }
-
   .blogs {
     grid-template-columns: 1fr 1fr;
   }
-
   .main-title h2 {
     font-size: 4rem;
   }
@@ -848,20 +826,16 @@ section {
   header {
     padding: 0;
   }
-
   header .right-header {
     padding: 0 !important;
   }
-
   .header-content {
     grid-template-columns: 1fr;
     padding-bottom: 6rem;
   }
-
   .left-header .h-shape {
     display: none;
   }
-
   .right-header {
     grid-row: 1;
     width: 90%;
@@ -870,16 +844,13 @@ section {
   .right-header .name {
     font-size: 2.5rem !important;
   }
-
   .header-content .left-header .image {
     margin: 0 auto;
     width: 90%;
   }
-
   .section {
     padding: 7rem 6rem;
   }
-
   .controls {
     top: auto;
     bottom: 0;
@@ -898,7 +869,6 @@ section {
   .section {
     padding: 7rem 3rem;
   }
-
   .about-stats .progress-bars {
     grid-template-columns: 1fr;
   }
